--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "wwt <648128145@qq.com>",
   "license": "MIT",
   "dependencies": {
+    "dayjs": "^1.8.12",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-promise": "^0.5.3",
